[workspace]
members = ["micro-gateway-rs", "micro-sync-rs"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["mingchiuli <me@chiu.wiki>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mingchiuli/megalith-micro"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.48.0", features = ["full"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Logging and tracing
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

# Async utilities
futures-util = "0.3.31"

# Web frameworks
axum = { version = "0.8.7", features = ["ws"] }
warp = { version = "0.3.7", features = ["websocket"] }

# HTTP
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.18", features = ["full"] }
http-body-util = "0.1.3"

# WebSocket
tokio-tungstenite = "0.28.0"

# CRDT and collaboration
yrs = "0.25.0"
yrs-warp = "0.9.0"

# Utilities
url = "2.5.7"
