[package]
name = "micro-gateway-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["ws"] }
hyper = { version = "1.7.0", features = ["full"] }
tokio = { version = "1.47.1", features = ["full"] }
http-body-util = "0.1.3"
hyper-util = { version = "0.1.17", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"
url = "2.5.7"
