[package]
name = "micro-gateway-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Inherit from workspace
axum.workspace = true
hyper.workspace = true
tokio.workspace = true
http-body-util.workspace = true
hyper-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
url.workspace = true
