[package]
name = "micro-sync-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# CRDT specific
yrs.workspace = true
yrs-warp.workspace = true

# Inherit from workspace
warp.workspace = true
tokio.workspace = true
serde = { workspace = true, features = ["rc"] }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures-util = { workspace = true, features = ["sink"] }
